# UniversalOS

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Instructions.md  LICENSE  Makefile  README.md  backup.sh  log_last_output.sh  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.kiro/specs/: README.md
.kiro/specs/0-foundation/project-structure-setup/directory-structure/: design.md  requirements.md  tasks.md
agendas/: agenda.md
assets/fonts/: README.md
assets/icons/: README.md
assets/icons/cutefish/: .gitkeep  README.md
assets/icons/quantum/: .gitkeep  README.md
assets/images/: README.md
assets/images/wallpapers/: .gitkeep  README.md
docs/: DIRECTORY_STRUCTURE.md  MASTER_PLAN.md  PLANNING_COMPLETE.md  PROJECT_SUMMARY.md  SPEC_ROADMAP.md
docs/api/: README.md
docs/architecture/: BOOTLOADER_AND_ARCHITECTURE.md  DIRECTORY_STRUCTURE_DIAGRAM.md  README.md
docs/design/: AUDIO_HARMONIC_DESIGN.md  CUTEFISH_DESKTOP_DESIGN.md  IMMUTABLE_SYSTEM_DESIGN.md  README.md
docs/guides/: README.md
docs/guides/contributor/: README.md
docs/guides/developer/: DIRECTORY_PURPOSES.md  FILE_NAMING_CONVENTIONS.md  README.md
docs/guides/user/: QUICK_START.md  README.md
docs/theory/: README.md
scripts/ci/: README.md
scripts/deploy/: README.md
scripts/dev/: README.md  validate-structure.ps1  validate-structure.sh
scripts/test/: README.md
src/audio/: README.md
src/bootloader/: README.md
src/desktop/: README.md
src/helix/: README.md
src/kernel/: README.md
src/libs/: README.md
src/quantum/: README.md
src/tools/: README.md
tests/algorithms/: README.md
tests/fixtures/: README.md
tests/integration/: README.md
tests/mocks/: README.md
tests/property/: README.md
tests/unit/: README.md
todo/todos/: Ideas.md
tools/algorithm-tester/: README.md
tools/mwave-analyzer/: README.md
tools/performance-profiler/: README.md
tools/quantum-debugger/: README.md
